<?xml version="1.0"?>
<package format="2">
  <name>pizza_shop</name>
  <version>1.3.2</version>
  <description>
    mtrx3760-major
  </description>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
